GET_OR_CREATE_CLIENT_BY_PHONE_NUMBER