@@ -42,7 +42,8 @@ public class ClientServiceImpl implements ClientService {
         return ApiResult.successResponse(all
                 .stream()
                 .map(ClientDTO::mapping)
-                .toList());
+                .collect(
+                Collectors.toList()));
     }
 
     @Override
@@ -66,7 +67,8 @@ public class ClientServiceImpl implements ClientService {
 
     @Override
     public ApiResult<Boolean> edit(ClientDTO clientDTO) {
-        Optional<Client> optionalClient = clientRepository.findById(clientDTO.getId());
+        Optional<Client> optionalClient = clientRepository
+                .findById(clientDTO.getId());
         if (optionalClient.isEmpty())
             throw RestException.restThrow("NOT_FOUND", HttpStatus.NOT_FOUND);
         Client client = optionalClient.get();
